--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.env
+#.env
 
 # dependencies
 /node_modules
@@ -14,7 +14,7 @@
 
 # misc
 .DS_Store
-.env.local
+#.env.local
 .env.development.local
 .env.test.local
 .env.production.local
