--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
 
   "name": "backend",
+
   "version": "1.0.0",
+
   "description": "",
+
   "main": "index.js",
+
   "scripts": {
+
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "node index.js",
+
     "dev": "nodemon index.js"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "dependencies": {
+
     "axios": "^1.8.3",
+
     "bcryptjs": "^3.0.2",
+
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+
+    "dotenv": "^16.5.0",
+
     "express": "^4.21.2",
+
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1"
+
+    "mongoose": "^8.12.1",
+
+    "nodemailer": "^7.0.3"
+
   },
+
   "devDependencies": {
+
     "nodemon": "^3.0.1"
+
   }
+
 }
+
